<resources>
    <string name="app_name">quote</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="welcome">Welcome to Insuance LLC Mobile</string>
    <string name="are_member">Are you a current member?</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_quote_title">NEW QUOTE</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="zip_code">Zip Code</string>
    <string name="is_this_car">Is This Your Car?</string>
    <string name="model">Model</string>
    <string name="vin">VIN</string>
    <string name="compare_policy">Compare Existing Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
