<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
            android:src="@drawable/ic_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/new_quote_title"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"/>
        <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"/>
        <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"/>
        <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/is_this_car"
                  android:layout_gravity="center"
                  android:layout_height="wrap_content"/>


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/vin" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/model" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/model" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/model" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/model" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button android:text="@string/yes"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <Button
                android:text="@string/no"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <Button
                android:text="@string/compare_policy"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>