<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
               android:layout_marginTop="20dp"
    android:layout_gravity="top|center"/>

    <TextView
            android:layout_marginTop="@dimen/margin"
            style="@style/big_text"
            android:text="@string/welcome"
            />

    <TextView
            android:layout_marginTop="@dimen/margin"
            style="@style/big_text"
    android:text="@string/are_member"/>

    <LinearLayout
            android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">
        <Button
                android:id="@+id/home_button_yes"
                style="@style/button"
        android:text="@string/yes"/>

    <Button
            android:id="@+id/home_button_no"
            style="@style/button"
            android:layout_marginStart="30dp"
    android:text="@string/no"/>
    </LinearLayout>

</LinearLayout>